--- a/GestaoContactos/public_html/styles/Adicionar.css
+++ b/GestaoContactos/public_html/styles/Adicionar.css
@@ -11,3 +11,14 @@ body {
     background-color: cornsilk;
 }
 
+.inputError{
+    border: 2px solid red;
+}
+
+.inputMessageError{
+    display: inline;
+}
+
+.inputMessageErrorHidden{
+    display: none;
+}
