Alterar CorFundo Index.js
Alterado Ficheiros
Index.js
Index.css (index.css pode ser apagado)

--- a/GestaoContactos/public_html/styles/index.css
+++ b/GestaoContactos/public_html/styles/index.css
@@ -8,6 +8,8 @@ and open the template in the editor.
     Author     : tania
 */
 
+/*
+NAO È NECESSÁRIO
 body {
     background-color: cornsilk;
-}
+}*/
