--- a/GestaoContactos/public_html/styles/Pesquisa.css
+++ b/GestaoContactos/public_html/styles/Pesquisa.css
@@ -11,3 +11,15 @@ and open the template in the editor.
 body {
     background-color: cornsilk;
 }
+
+.inputError{
+    border: 2px solid red;
+}
+
+.inputMessageError{
+    display: inline;
+}
+
+.inputMessageErrorHidden{
+    display: none;
+}
