--- a/GestaoContactos/public_html/styles/Adicionar.css
+++ b/GestaoContactos/public_html/styles/Adicionar.css
@@ -8,7 +8,8 @@ and open the template in the editor.
     Author     : tania
 */
 body {
-    background-color: cornsilk;
+    /*background-color: black;*/
+    
 }
 
 .inputError{
