--- a/GestaoContactos/public_html/styles/Editar.css
+++ b/GestaoContactos/public_html/styles/Editar.css
@@ -11,3 +11,12 @@ and open the template in the editor.
 body {
     /*background-color: black;*/
 }
+
+
+input[type=checkbox][id=Fav] {
+  display: none;
+}
+
+:checked+img {
+  border: 2px solid red;
+}
