--- a/GestaoContactos/public_html/styles/Adicionar.css
+++ b/GestaoContactos/public_html/styles/Adicionar.css
@@ -23,3 +23,11 @@ body {
 .inputMessageErrorHidden{
     display: none;
 }
+
+input[type=checkbox][id=Fav] {
+  display: none;
+}
+
+:checked+img {
+  border: 2px solid red;
+}
