--- a/GestaoContactos/public_html/styles/index.css
+++ b/GestaoContactos/public_html/styles/index.css
@@ -7,3 +7,49 @@ and open the template in the editor.
     Created on : 28/dez/2016, 17:11:41
     Author     : tania
 */
+
+@font-face {
+    font-family: ChunkFive;
+    src: url(../Font/Chunkfive.otf);
+}
+
+h1{
+    color: darkslategray;
+    font-family: ChunkFive;
+    text-align: center;
+}
+
+ul{
+    list-style-type: none;
+}
+
+nav#menu > ul> li >a{
+    padding: 7px;  
+    font-size: 21px;  
+    color: black;  
+    text-decoration: none;  
+    font-family: ChunkFive;  
+    display: inline-block;
+    vertical-align: middle;
+    -webkit-transform: perspective(1px) translateZ(0);
+    transform: perspective(1px) translateZ(0);
+    box-shadow: 0 0 1px transparent;
+    -webkit-transition-duration: 0.3s;
+    transition-duration: 0.3s;
+    -webkit-transition-property: transform;
+    transition-property: transform;
+}
+
+nav#menu > ul> li >a:hover, nav#menu > ul> li >a:focus, nav#menu > ul> li >a:active{
+    -webkit-transform: scale(1.1) rotate(4deg);
+    transform: scale(1.1) rotate(4deg);  
+}
+
+label > select{
+    margin-right: 80%;
+    list-style-type: none;
+}
+
+label{
+    margin-left: 80%;
+}
