--- a/GestaoContactos/public_html/styles/Editar.css
+++ b/GestaoContactos/public_html/styles/Editar.css
@@ -8,10 +8,47 @@ and open the template in the editor.
     Author     : César
 */
 
+.inputError{
+    border: 2px solid red;
+}
+
+.inputMessageError{
+    display: inline;
+}
+
+.inputMessageErrorHidden{
+    display: none;
+}
+
 input[type=checkbox][id=Fav] {
   display: none;
 }
 
 :checked+img {
   border: 2px solid red;
+}
+
+@font-face {
+    font-family: ChunkFive;
+    src: url(../Font/Chunkfive.otf);
+}
+
+@font-face {
+    font-family: Roboto;
+    src: url(../Font/Roboto-Black.ttf);
+}
+
+body{
+    font-family: Roboto;
+}
+
+h1{
+    color: darkslategray;
+    font-family: ChunkFive;
+    text-align: center;
+}
+
+h2{
+    color: black;
+    font-family: ChunkFive;
 }
