--- a/GestaoContactos/public_html/styles/ListarContacto.css
+++ b/GestaoContactos/public_html/styles/ListarContacto.css
@@ -8,3 +8,27 @@ and open the template in the editor.
     Author     : tania
 */
 
+@font-face {
+    font-family: ChunkFive;
+    src: url(../Font/Chunkfive.otf);
+}
+
+@font-face {
+    font-family: Roboto;
+    src: url(../Font/Roboto-Black.ttf);
+}
+
+body{
+    font-family: Roboto;
+}
+
+h1{
+    color: darkslategray;
+    font-family: ChunkFive;
+    text-align: center;
+}
+
+h2{
+    color: black;
+    font-family: ChunkFive;
+}
