--- a/GestaoContactos/public_html/styles/index.css
+++ b/GestaoContactos/public_html/styles/index.css
@@ -13,6 +13,15 @@ and open the template in the editor.
     src: url(../Font/Chunkfive.otf);
 }
 
+@font-face {
+    font-family: Roboto;
+    src: url(../Font/Roboto-Black.ttf);
+}
+
+body{
+    font-family: Roboto;
+}
+
 h1{
     color: darkslategray;
     font-family: ChunkFive;
