Alteraçao do estilo das paginas
O estilo de todas as paginas foi alterado
o botão das cores fica no rodapé
rodapé adicionado no index

--- a/GestaoContactos/public_html/styles/Editar.css
+++ b/GestaoContactos/public_html/styles/Editar.css
@@ -52,3 +52,12 @@ h2{
     color: black;
     font-family: ChunkFive;
 }
+
+label[for=cor] > select{
+    margin-right: 80%;
+    list-style-type: none;
+}
+
+label[for=cor]{
+    margin-left: 80%;
+}
