--- a/GestaoContactos/public_html/styles/ListarFavoritos.css
+++ b/GestaoContactos/public_html/styles/ListarFavoritos.css
@@ -8,4 +8,53 @@ and open the template in the editor.
     Author     : tania
 */
 
+@font-face {
+    font-family: ChunkFive;
+    src: url(../Font/Chunkfive.otf);
+}
 
+@font-face {
+    font-family: Roboto;
+    src: url(../Font/Roboto-Black.ttf);
+}
+
+body{
+    font-family: Roboto;
+}
+
+h1{
+    color: darkslategray;
+    font-family: ChunkFive;
+    text-align: center;
+}
+
+h2{
+    color: black;
+    font-family: ChunkFive;
+}
+
+label[for=cor] > select{
+    display:none;
+   margin-left: 60%;
+}
+
+label[for=cor]{
+    margin-left: 60%;
+}
+
+footer {
+    text-decoration: none;
+    color: black;
+    padding-bottom: 5px;
+    text-align: left;
+    position: absolute;
+    bottom:0px;
+    margin-left: 50%;
+    width: 600px;
+}
+
+footer p {
+    margin-left: 10%;
+    list-style-type: none;
+
+}
