--- a/GestaoContactos/public_html/styles/Pesquisa.css
+++ b/GestaoContactos/public_html/styles/Pesquisa.css
@@ -44,3 +44,29 @@ h2{
     color: black;
     font-family: ChunkFive;
 }
+
+label[for=cor] > select{
+    display:none;
+   margin-left: 60%;
+}
+
+label[for=cor]{
+    margin-left: 60%;
+}
+
+footer {
+    text-decoration: none;
+    color: black;
+    padding-bottom: 5px;
+    text-align: left;
+    position: absolute;
+    bottom:0px;
+    margin-left: 50%;
+    width: 600px;
+}
+
+footer p {
+    margin-left: 10%;
+    list-style-type: none;
+
+}
