--- a/GestaoContactos/public_html/styles/ListarFavoritos.css
+++ b/GestaoContactos/public_html/styles/ListarFavoritos.css
@@ -19,7 +19,12 @@ and open the template in the editor.
 }
 
 body{
-    font-family: Roboto;
+    font-family: Roboto;  
+}
+
+div[id=conteudo]{
+
+    margin-left: 40%;
 }
 
 h1{
@@ -57,4 +62,32 @@ footer p {
     margin-left: 10%;
     list-style-type: none;
 
+}
+
+ul{
+    list-style-type: none;
+    float: left;
+}
+
+nav#menu > ul> li >a, nav#menu > ul> li > p >a{
+    padding: 7px;  
+    font-size: 21px;  
+    color: black;  
+    text-decoration: none;  
+    font-family: ChunkFive;  
+    display: inline-block;
+    vertical-align: middle;
+    -webkit-transform: perspective(1px) translateZ(0);
+    transform: perspective(1px) translateZ(0);
+    box-shadow: 0 0 1px transparent;
+    -webkit-transition-duration: 0.3s;
+    transition-duration: 0.3s;
+    -webkit-transition-property: transform;
+    transition-property: transform;
+}
+
+nav#menu > ul> li >a:hover, nav#menu > ul> li >a:focus, nav#menu > ul> li >a:active,
+nav#menu > ul> li > p >a:hover, nav#menu > ul> li > p >a:focus, nav#menu > ul> li > p >a:active{
+    -webkit-transform: scale(1.1) rotate(4deg);
+    transform: scale(1.1) rotate(4deg);  
 }
