--- a/GestaoContactos/public_html/styles/ListarTodosContactos.css
+++ b/GestaoContactos/public_html/styles/ListarTodosContactos.css
@@ -52,7 +52,7 @@ footer {
     color: black;
     padding-bottom: 5px;
     text-align: left;
-    position: absolute;
+    position: fixed;
     bottom:0px;
     margin-left: 50%;
     width: 600px;
