--- a/GestaoContactos/public_html/styles/About.css
+++ b/GestaoContactos/public_html/styles/About.css
@@ -4,7 +4,101 @@ To change this template file, choose Tools | Templates
 and open the template in the editor.
 */
 /* 
-    Created on : Jan 15, 2017, 9:04:38 PM
-    Author     : César
+    Created on : 28/dez/2016, 17:11:41
+    Author     : tania
 */
 
+@font-face {
+    font-family: ChunkFive;
+    src: url(../Font/Chunkfive.otf);
+}
+
+@font-face {
+    font-family: Roboto;
+    src: url(../Font/Roboto-Black.ttf);
+}
+
+body{
+    font-family: Roboto;
+}
+
+h1{
+    color: darkslategray;
+    font-family: ChunkFive;
+    text-align: center;
+}
+
+ul{
+    list-style-type: none;
+    float: left;
+}
+
+nav#menu > ul> li >a, nav#menu > ul> li > p >a{
+    padding: 7px;  
+    font-size: 21px;  
+    color: black;  
+    text-decoration: none;  
+    font-family: ChunkFive;  
+    display: inline-block;
+    vertical-align: middle;
+    -webkit-transform: perspective(1px) translateZ(0);
+    transform: perspective(1px) translateZ(0);
+    box-shadow: 0 0 1px transparent;
+    -webkit-transition-duration: 0.3s;
+    transition-duration: 0.3s;
+    -webkit-transition-property: transform;
+    transition-property: transform;
+}
+
+nav#menu > ul> li >a:hover, nav#menu > ul> li >a:focus, nav#menu > ul> li >a:active,
+nav#menu > ul> li > p >a:hover, nav#menu > ul> li > p >a:focus, nav#menu > ul> li > p >a:active{
+    -webkit-transform: scale(1.1) rotate(4deg);
+    transform: scale(1.1) rotate(4deg);  
+}
+
+nav#menu {
+      position: fixed;
+}
+
+label select{
+   display:none;
+   margin-left: 60%;
+}
+
+label{
+    margin-left: 60%;
+}
+
+footer {
+    text-decoration: none;
+    color: black;
+    padding-bottom: 5px;
+    text-align: left;
+    position: absolute;
+    bottom:0px;
+    margin-left: 50%;
+    width: 600px;
+}
+
+div[id=text]{
+    text-align: center;
+    padding-top: 13%;
+    font-size: 150%;
+}
+
+img{
+    text-decoration: none;
+    display: block;
+    margin-left: 650px;
+    position: absolute;
+    margin-top: 5%;
+    width: 200px;
+    
+}
+
+video{
+    position: absolute;
+    padding-left: 25%;
+    float: left;
+    padding-bottom: 145px;
+}
